--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -387,7 +387,7 @@
      </widget>
     </item>
     <item row="2" column="3">
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="pushButton_certificate">
       <property name="text">
        <string>Export Certificate</string>
       </property>
