--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -373,14 +373,14 @@
      </widget>
     </item>
     <item row="2" column="5">
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="pushButton_belts">
       <property name="text">
        <string>Export Belts</string>
       </property>
      </widget>
     </item>
     <item row="2" column="4">
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="pushButton_report">
       <property name="text">
        <string>Export Report</string>
       </property>
